@@ -9,6 +9,17 @@ from . import cons3rtapi
 from . import cons3rtclient
 from . import httpclient
 from . import pycons3rtlibs
+from . import cons3rtcli
+from . import cons3rtconfig
+from . import cons3rt
 
 __title__ = 'pycons3rtapi'
-__all__ = ['cons3rtapi', 'cons3rtclient', 'httpclient', 'pycons3rtlibs']
+__all__ = [
+    'cons3rtapi',
+    'cons3rtclient',
+    'httpclient',
+    'pycons3rtlibs',
+    'cons3rtcli',
+    'cons3rtconfig',
+    'cons3rt'
+]
