@@ -13,6 +13,7 @@ import sys
 import argparse
 
 from cons3rtconfig import manual_config
+from cons3rtcli import CloudspaceCli, Cons3rtCliError
 
 # Commands for setting up the cons3rtapi configuration
 setup_command_options = [
@@ -22,15 +23,30 @@ setup_command_options = [
 ]
 
 # List of valid CLI commands
-valid_commands = setup_command_options
+valid_commands = setup_command_options + [
+    'cloudspace'
+]
 
 # String representation of valid commands
 valid_commands_str = 'Valid commands: {c}'.format(c=', '.join(valid_commands))
 
 
+def cloudspace_cli(args):
+    c = CloudspaceCli(args)
+    if c.process_args():
+        return 0
+    return 1
+
+
 def main():
     parser = argparse.ArgumentParser(description='CONS3RT command line interface (CLI)')
     parser.add_argument('command', help='Command for the cons3rt CLI')
+    parser.add_argument('--delete', help='Delete action relative to the command provided', action='store_true')
+    parser.add_argument('--delete_inactive_runs', help='Delete inactive runs from a cloudspace', action='store_true')
+    parser.add_argument('--release_active_runs', help='Release active runs from a cloudspace', action='store_true')
+    parser.add_argument('--all', help='All action relative to the command provided', action='store_true')
+    parser.add_argument('--id', help='ID relative to the command provided', required=False)
+    parser.add_argument('--ids', help='List of IDs relative to the command provided', required=False)
     args = parser.parse_args()
 
     # Get the command
@@ -41,6 +57,10 @@ def main():
 
     if args.command in setup_command_options:
         manual_config()
+    elif args.command == 'cloudspace':
+        return cloudspace_cli(args)
+    else:
+        print('Command is not yet supported: {c}'.format(c=args.command))
     return 0
 
 
